site/public/css/server.css
/* ... */
/* from https://css-tricks.com/css3-progress-bars/ */
.meter {
    height: 10px;
    position: relative;
    background: rgb(224,224,224);
    padding: 0px;
}
.meter > span {
    display: block;
    height: 100%;
    background-color: rgb(92,184,92);
    position: relative;
}

/*
The styles used in the admin gradeable page
*/
div.gradeable_display {
    text-align: left;
    font-size: 8px;
    padding-left: 5px;
}

textarea.comment_display {
    resize: none;
    width: 75%;
}

/*
end of styles used in the admin gradeable page
*/

#settings-content {
    height: 400px;
    padding-top: 1em;
    overflow-y: auto;
}

#hotkeys-list {
    width: 100%;
    border-collapse: collapse;
}

#hotkeys-list tr {
    border: 1px solid #ddd;
    border-left: none;
    border-right: none;
}

#hotkeys-list tr:nth-child(even) {
    background-color: #eee;
}

#hotkeys-list td {
    padding: 4px;
}

.remap-button {
    width: 100%;
    text-align: center;
}

/* styles for the colors for the electronic grader details page */
/* color for no grader */
.grader-NULL {
    color: white;
    text-shadow:
    -1px -1px 0 #000,
    1px -1px 0 #000,
    -1px 1px 0 #000,
    1px 1px 0 #000;
}

/* color for limited access graders who were verifed */
.grader-verified{
                                        /* yellow       green   */
    background: linear-gradient(to right, #ffcc33 50%, #33cc33 50%);
    background-clip : text;
    color: transparent;
    /* chrome & safari */
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

/* color for student/peer grading */
.grader-4 {
    color: #cc66ff; /* purple */
}

/* color for a limited access grader */
.grader-3 {
    color: #ffcc33;  /* yellow */
}

/* color for an instructor or full access grader */
.grader-2,
.grader-1 {
    color: #33cc33;  /* green */
}

/* color for double graded */
.grader-double {
    color: #006699;  /* dark blue */
}

/* prevents line break in the graded questions column */
.td-graded-questions {
    white-space: nowrap;
}

/* color for nav page edit button for rebuild error on gradeable */
.edit-build-error {
    color: red;
}

.required::-webkit-input-placeholder { color: #cc0000; }
.required:-moz-placeholder { color: #cc0000; }
.required::-moz-placeholder { color: #cc0000; }
.required:-ms-input-placeholder { color: #cc0000; }

#required_type{
    color: #cc0000;
    display: inline;
}

.modal{
    display: none;
    position: fixed;
    z-index: 50;
    padding-top: 100px;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgba(0,0,0,0.4);
}

.modal-content{
    text-align: center;
    background-color: #fefefe;
    margin: auto;
    padding: 30px;
    padding-top: 15px;
    border: 1px solid #888;
    width: 420px;
    min-width: 400px;
    border-radius: 5px;
}

/* Site Wrapper */

#container {
    display: flex;
    flex-direction: column;
}

#container #center-container {
    display: flex;
    flex-direction: row;
    flex-grow: 1;
}

#site-body {
    flex-grow: 2;
    display: flex;
    flex-direction: column;
}

#site-body > .row {
    flex-wrap: nowrap;
}

#container iframe#top_bar, #container iframe#bottom_bar {
    height: 60px;
}

#container iframe#left_sidebar, #container iframe#right_sidebar {
    width: 200px;
}

/* Site Wrapper View */

.wrapper-example {
    width: 400px;
    height: 240px;
    display: flex;
    flex-direction: column;
}
.wrapper-example .wrapper-center {
    display: flex;
    flex-grow: 2;
    flex-direction: row;
}
.wrapper-example .wrapper-top,
.wrapper-example .wrapper-left,
.wrapper-example .wrapper-body,
.wrapper-example .wrapper-right,
.wrapper-example .wrapper-bottom {
    flex-grow: 1;
    border: 1px solid #000;
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
}
.wrapper-example .wrapper-body {
    flex-grow: 5;
}
.wrapper-top {
    background-color: #ff9999;
}
.wrapper-left {
    background-color: #ffff66;
}
.wrapper-body {
    background-color: #ffffff;
}
.wrapper-right {
    background-color: #99ff99;
}
.wrapper-bottom {
    background-color: #99ccff;
}
.wrapper-upload th {
    background-color: #f4f4f4;
}

.wrapper-upload td, .wrapper-upload th {
    padding: 4px;
    border: 1px solid #000;
}

.query-list {
    width: 2em;
}

.query-list .index {
    text-align: right;
}

#header .fa-external-link {
    margin-left: 10px;
}

.courses-table {
    width: 100%;
}

.courses-table .btn {
    margin-bottom: 3px;
}

.noscript,
.system_message {
    width: 100%;
    height: 2em;
}

.system_message {
    background: #fff3cd;
    color: #856404;
    height: 2em;
}

.noscript {
    background: #f2dede;
    color: #b94a48;
}

.noscript span,
.system_message span {
    text-align: center;
    margin: auto;
    font-size: 1.5em;
    font-weight: bold;
}

.scrollable-image{
    overflow: auto; 
    width: 100%;
    max-height: 300px;
}
#details-legend > li{
    list-style: none;
    padding-left: 15px;
    font-size: 0.75em;
}

